--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="container">
     <div class="sidebar">
       <div class="profile-pic">
-        <img src="images/myphoto.jpg.jpg" alt="Profile Picture">
+        <img src="images/myphoto.jpg" alt="Profile Picture">
       </div>
       <h2>Abinaya P</h2>
       <p>Fresher</p>
