--- a/index.html
+++ b/index.html
@@ -186,7 +186,6 @@
         <div class="project-title">Music Player App</div>
         <div class="overlay">
           <p>A modern music player app with background playback, favorites, and search features.</p>
-          <a href="https://github.com/yourusername/project-repo" target="_blank" class="github-link" rel="noopener noreferrer">
       <i class="fab fa-github"></i> View on GitHub
     </a>
         </div>
@@ -197,7 +196,6 @@
         <div class="project-title">Face Detection</div>
         <div class="overlay">
           <p>Real-time face detection system using webcam input.</p>
-          <a href="https://github.com/yourusername/project-repo" target="_blank" class="github-link" rel="noopener noreferrer">
       <i class="fab fa-github"></i> View on GitHub
     </a>
         </div>
@@ -208,7 +206,7 @@
         <div class="project-title">Portfolio Website</div>
         <div class="overlay">
           <p>Interactive portfolio showcasing profile, resume, and projects with animation.</p>
-          <a href="https://github.com/yourusername/project-repo" target="_blank" class="github-link" rel="noopener noreferrer">
+          <a href="https://abinayap10.github.io/Portfolio/" target="_blank" class="github-link" rel="noopener noreferrer">
       <i class="fab fa-github"></i> View on GitHub
     </a>
         </div>
